--- a/storage.yaml
+++ b/storage.yaml
@@ -1,17 +1,9 @@
 ---
-apiVersion: v1
-kind: PersistentVolume
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
 metadata:
-  name: wordpress-pv
-spec:
-  capacity:
-    storage: 5Gi
-  accessModes:
-    - ReadWriteMany
-  storageClassName: standard
-  nfs:
-    server: nfs-server.default.svc.cluster.local
-    path: "/wordpress"
+  name: efs-sc
+provisioner: efs.csi.aws.com
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -20,24 +12,10 @@ metadata:
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: standard
+  storageClassName: efs-sc
   resources:
     requests:
       storage: 5Gi
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: mysql-pv
-spec:
-  capacity:
-    storage: 2Gi
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: standard
-  nfs:
-    server: nfs-server.default.svc.cluster.local
-    path: "/mysql"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -46,7 +24,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: standard
+  storageClassName: gp2
   resources:
     requests:
-      storage: 2Gi
+      storage: 5Gi
