--- a/helm-values.yaml
+++ b/helm-values.yaml
@@ -1,10 +1,8 @@
-# WordPress configuration
-wordpress:
-  image:
-    repository: yourusername/wordpress
-    tag: latest
-  persistence:
-    existingClaim: wordpress-pvc
+# Main application image
+image:
+  repository: yourusername/wordpress
+  tag: latest
+  pullPolicy: IfNotPresent
 
 # MySQL configuration
 mysql:
@@ -14,7 +12,7 @@ mysql:
   persistence:
     existingClaim: mysql-pvc
 
-# Nginx configuration
+# Nginx configuration (if separate from main application)
 nginx:
   image:
     repository: yourusername/nginx-openresty
@@ -45,6 +43,7 @@ serviceAccount:
 # Persistence configuration
 persistence:
   enabled: true
+  existingClaim: wordpress-pvc
 
 # Resource configuration
 resources: {}
