--- a/cluster.yaml
+++ b/cluster.yaml
@@ -3,8 +3,7 @@ kind: ClusterConfig
 
 metadata:
   name: wordpress-cluster
-  region: us-west-2  # Change this to your preferred region
-
+  region: us-west-2  
 managedNodeGroups:
   - name: ng-1
     instanceType: t3.medium
