--- a/new/docker/Dockerfile.nginx
+++ b/new/docker/Dockerfile.nginx
@@ -1,7 +1,10 @@
 FROM openresty/openresty:alpine
 
-RUN apk add --no-cache gcc libtool make pcre-dev \
-    && mkdir -p /usr/local/src \
+# Install dependencies
+RUN apk add --no-cache gcc libtool make pcre-dev wget tar openssl-dev zlib-dev linux-headers
+
+# Build and install OpenResty
+RUN mkdir -p /usr/local/src \
     && cd /usr/local/src \
     && wget https://openresty.org/download/openresty-1.19.9.1.tar.gz \
     && tar xzf openresty-1.19.9.1.tar.gz \
@@ -10,4 +13,10 @@ RUN apk add --no-cache gcc libtool make pcre-dev \
     && make -j8 \
     && make install
 
+# Copy nginx configuration
+COPY nginx.conf /usr/local/openresty/nginx/conf/nginx.conf
 
+# Expose port 80
+EXPOSE 80
+
+CMD ["/opt/openresty/bin/openresty", "-g", "daemon off;"]
