--- a/new/docker/nginx.conf
+++ b/new/docker/nginx.conf
@@ -11,24 +11,22 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
-    upstream wordpress {
-        server wordpress:80;
-    }
-
     server {
-        listen 80;
+        listen       80;
+        server_name  localhost;
 
         location / {
-            proxy_pass http://wordpress;
+            proxy_pass http://wordpress:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-            root /usr/share/nginx/html;
+        location /lua {
+            content_by_lua_block {
+                ngx.say("Hello, Lua!")
+            }
         }
     }
 }
