--- a/new/docker/Dockerfile.nginx
+++ b/new/docker/Dockerfile.nginx
@@ -1,22 +1,38 @@
-FROM openresty/openresty:alpine
+FROM ubuntu:20.04
 
-# Install dependencies
-RUN apk add --no-cache gcc libtool make pcre-dev wget tar openssl-dev zlib-dev linux-headers perl musl-dev
+ENV OPENRESTY_VERSION=1.19.3.1
+ENV DEBIAN_FRONTEND=noninteractive
 
-# Build and install OpenResty
-RUN mkdir -p /usr/local/src \
-    && cd /usr/local/src \
-    && wget https://openresty.org/download/openresty-1.19.9.1.tar.gz \
-    && tar xzf openresty-1.19.9.1.tar.gz \
-    && cd openresty-1.19.9.1 \
-    && ./configure --prefix=/opt/openresty --with-pcre-jit --with-ipv6 --without-http_redis2_module --with-http_iconv_module --with-http_postgres_module -j8 \
+# Install dependencies and OpenResty
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    libpcre3-dev \
+    libssl-dev \
+    zlib1g-dev \
+    wget \
+    && rm -rf /var/lib/apt/lists/*
+
+WORKDIR /tmp
+
+RUN wget https://openresty.org/download/openresty-${OPENRESTY_VERSION}.tar.gz \
+    && tar -xzvf openresty-${OPENRESTY_VERSION}.tar.gz \
+    && cd openresty-${OPENRESTY_VERSION} \
+    && ./configure --prefix=/opt/openresty \
+        --with-pcre-jit \
+        --with-ipv6 \
+        --without-http_redis2_module \
+        --with-http_iconv_module \
+        -j8 \
     && make -j8 \
-    && make install
+    && make install \
+    && cd /tmp \
+    && rm -rf openresty-${OPENRESTY_VERSION}*
 
-# Copy nginx configuration
-COPY nginx.conf /usr/local/openresty/nginx/conf/nginx.conf
+ENV PATH=$PATH:/opt/openresty/nginx/sbin
 
-# Expose port 80
+# Copy the nginx.conf file from the build context
+COPY nginx.conf /opt/openresty/nginx/conf/nginx.conf
+
 EXPOSE 80
 
-CMD ["/opt/openresty/bin/openresty", "-g", "daemon off;"]
+CMD ["/opt/openresty/nginx/sbin/nginx", "-g", "daemon off;"]
