--- a/service-monitor.yaml
+++ b/service-monitor.yaml
@@ -7,7 +7,8 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/instance: my-release
-      app.kubernetes.io/name: wordpress
+      app: wordpress
   endpoints:
   - port: http
+    path: /metrics
+    interval: 15s
