--- a/new2/docker files/Dockerfile.nginx
+++ b/new2/docker files/Dockerfile.nginx
@@ -1,27 +1,53 @@
-FROM openresty/openresty:alpine
+FROM alpine:3.14
 
-# Install build dependencies
-RUN apk add --no-cache build-base pcre-dev openssl-dev zlib-dev linux-headers
+# Install build dependencies and Perl
+RUN apk add --no-cache \
+    build-base \
+    curl \
+    gd-dev \
+    geoip-dev \
+    libxslt-dev \
+    linux-headers \
+    make \
+    perl \
+    perl-dev \
+    zlib-dev \
+    pcre-dev \
+    libc-dev \
+    libgcc \
+    openssl-dev
 
-# Download and compile OpenResty with custom options
-RUN wget https://openresty.org/download/openresty-1.19.3.1.tar.gz && \
-    tar -xzvf openresty-1.19.3.1.tar.gz && \
-    cd openresty-1.19.3.1 && \
-    ./configure --prefix=/opt/openresty \
-                --with-pcre-jit \
-                --with-ipv6 \
-                --without-http_redis2_module \
-                --with-http_iconv_module \
-                --with-http_postgres_module \
-                -j8 && \
-    make -j8 && \
-    make install
+# Download and install OpenResty
+ENV OPENRESTY_VERSION=1.19.3.1
+ENV OPENRESTY_PREFIX=/opt/openresty
+
+RUN cd /tmp && \
+    curl -fSL https://openresty.org/download/openresty-${OPENRESTY_VERSION}.tar.gz -o openresty-${OPENRESTY_VERSION}.tar.gz && \
+    tar xzf openresty-${OPENRESTY_VERSION}.tar.gz && \
+    cd /tmp/openresty-${OPENRESTY_VERSION} && \
+    ./configure \
+        --prefix=${OPENRESTY_PREFIX} \
+        --with-pcre-jit \
+        --with-ipv6 \
+        --without-http_redis2_module \
+        --with-http_iconv_module \
+        --with-http_postgres_module \
+        -j$(nproc) && \
+    make -j$(nproc) && \
+    make install && \
+    cd /tmp && \
+    rm -rf \
+        openresty-${OPENRESTY_VERSION} \
+        openresty-${OPENRESTY_VERSION}.tar.gz
+
+# Symlink usr/local/openresty/nginx/sbin/nginx
+RUN ln -sf ${OPENRESTY_PREFIX}/nginx/sbin/nginx /usr/local/bin/nginx
 
 # Copy Nginx configuration
-COPY nginx.conf /opt/openresty/nginx/conf/nginx.conf
+COPY nginx.conf ${OPENRESTY_PREFIX}/nginx/conf/nginx.conf
 
 # Expose port 80
 EXPOSE 80
 
 # Start OpenResty
-CMD ["/opt/openresty/nginx/sbin/nginx", "-g", "daemon off;"]
+CMD ["nginx", "-g", "daemon off;"]
