--- a/new2/docker files/Dockerfile.nginx
+++ b/new2/docker files/Dockerfile.nginx
@@ -1,6 +1,6 @@
 FROM alpine:3.14
 
-# Install build dependencies and Perl
+# Install build dependencies, Perl, and PostgreSQL
 RUN apk add --no-cache \
     build-base \
     curl \
@@ -15,7 +15,8 @@ RUN apk add --no-cache \
     pcre-dev \
     libc-dev \
     libgcc \
-    openssl-dev
+    openssl-dev \
+    postgresql-dev
 
 # Download and install OpenResty
 ENV OPENRESTY_VERSION=1.19.3.1
