--- a/new2/values.yaml
+++ b/new2/values.yaml
@@ -4,6 +4,8 @@ wordpress:
     tag: v1
   persistence:
     existingClaim: wordpress-pvc
+  service:
+    port: 80
 
 mysql:
   image:
@@ -14,16 +16,31 @@ mysql:
     storageClass: gp2
     accessMode: ReadWriteOnce
     size: 8Gi
+  service:
+    port: 3306
 
 nginx:
   image:
     repository: yashingole1000/nginx
     tag: v1
+  service:
+    port: 80
 
 ingress:
   enabled: true
-  annotations:
-    kubernetes.io/ingress.class: nginx
+  className: ""
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
   hosts:
     - host: wordpress.local
-      paths: ["/"]
+      paths:
+        - path: /
+          pathType: Prefix
+
+serviceAccount:
+  create: false
+  annotations: {}
+  name: ""
+
+autoscaling:
+  enabled: false
