--- a/new2/deployment.yaml
+++ b/new2/deployment.yaml
@@ -58,7 +58,7 @@ spec:
       volumes:
         - name: mysql-persistent-storage
           persistentVolumeClaim:
-            claimName: {{ include "wordpress-chart.fullname" . }}-mysql
+            claimName: {{ .Values.mysql.persistence.existingClaim }}
 ---
 apiVersion: apps/v1
 kind: Deployment
