--- a/new2/values.yaml
+++ b/new2/values.yaml
@@ -13,9 +13,9 @@ mysql:
     tag: v1
   persistence:
     enabled: true
-    storageClass: gp2
-    accessMode: ReadWriteOnce
-    size: 8Gi
+    existingClaim: wordpress-pvc
+    accessMode: ReadWriteMany
+    size: 5Gi
   service:
     port: 3306
 
@@ -30,7 +30,6 @@ ingress:
   enabled: true
   className: ""
   annotations: {}
-    # kubernetes.io/ingress.class: nginx
   hosts:
     - host: wordpress.local
       paths:
