--- a/new2/wordpress-pv-pvc.yaml
+++ b/new2/wordpress-pv-pvc.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: v1
 kind: PersistentVolume
 metadata:
@@ -10,7 +9,7 @@ spec:
     - ReadWriteMany
   storageClassName: gp2
   awsElasticBlockStore:
-    volumeID: vol-07beb76fc3d240a09
+    volumeID: <your-ebs-volume-id>
     fsType: ext4
 ---
 apiVersion: v1
@@ -24,6 +23,3 @@ spec:
   resources:
     requests:
       storage: 5Gi
-
-
- 
