--- a/new2/docker files/nginx.conf
+++ b/new2/docker files/nginx.conf
@@ -12,7 +12,7 @@ http {
         server_name localhost;
 
         location / {
-            proxy_pass http://wordpress-service;
+            proxy_pass http://my-release-wordpress-chart-wordpress;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
