--- a/new2/wordpress-pv-pvc.yaml
+++ b/new2/wordpress-pv-pvc.yaml
@@ -1,3 +1,9 @@
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: efs-sc
+provisioner: efs.csi.aws.com
+---
 apiVersion: v1
 kind: PersistentVolume
 metadata:
@@ -7,10 +13,13 @@ spec:
     storage: 5Gi
   accessModes:
     - ReadWriteMany
-  storageClassName: gp2
-  awsElasticBlockStore:
-    volumeID: vol-07beb76fc3d240a09
-    fsType: ext4
+  storageClassName: efs-sc
+  nfs:
+    path: /
+    server: fs-0c62dbc24fcc78163.efs.us-west-2.amazonaws.com
+  claimRef:
+    namespace: default
+    name: wordpress-pvc
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -19,7 +28,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: gp2
+  storageClassName: efs-sc
   resources:
     requests:
       storage: 5Gi
