--- a/new2/wordpress-pv-pvc.yaml
+++ b/new2/wordpress-pv-pvc.yaml
@@ -11,15 +11,14 @@ metadata:
 spec:
   capacity:
     storage: 5Gi
+  volumeMode: Filesystem
   accessModes:
     - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
   storageClassName: efs-sc
-  nfs:
-    path: /
-    server: fs-0c62dbc24fcc78163.efs.us-west-2.amazonaws.com
-  claimRef:
-    namespace: default
-    name: wordpress-pvc
+  csi:
+    driver: efs.csi.aws.com
+    volumeHandle: fs-0c62dbc24fcc78163
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
