--- a/new2/docker files/nginx.conf
+++ b/new2/docker files/nginx.conf
@@ -1,20 +1,15 @@
-worker_processes auto;
-error_log /var/log/nginx/error.log;
-pid /run/nginx.pid;
-
-events {
-    worker_connections 1024;
+upstream wordpress {
+    server {{ include "wordpress-chart.fullname" . }}-wordpress:80;
 }
 
-http {
-    server {
-        listen 80;
-        server_name localhost;
+server {
+    listen 80;
 
-        location / {
-            proxy_pass http://my-release-wordpress-chart-wordpress;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
+    location / {
+        proxy_pass http://wordpress;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
