--- a/new2/wordpress-pv-pvc.yaml
+++ b/new2/wordpress-pv-pvc.yaml
@@ -1,53 +1,45 @@
-{{- if .Values.persistence.enabled }}
----
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: {{ .Values.persistence.storageClassName }}
-provisioner: {{ .Values.persistence.provisioner }}
-
+  name: efs-sc
+provisioner: efs.csi.aws.com
 ---
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: {{ include "wordpress-chart.fullname" . }}-pv
-  labels:
-    {{- include "wordpress-chart.labels" . | nindent 4 }}
+  name: wordpress-pv
 spec:
   capacity:
-    storage: {{ .Values.persistence.size }}
+    storage: 5Gi
   volumeMode: Filesystem
   accessModes:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: {{ .Values.persistence.storageClassName }}
+  storageClassName: efs-sc
   csi:
-    driver: {{ .Values.persistence.csiDriver }}
-    volumeHandle: {{ .Values.persistence.volumeHandle }}
-
+    driver: efs.csi.aws.com
+    volumeHandle: fs-0c62dbc24fcc78163
 ---
-
-   apiVersion: v1
-   kind: PersistentVolumeClaim
-   metadata:
-     name: {{ include "wordpress-chart.fullname" . }}-wordpress-pvc
-   spec:
-     accessModes:
-       - ReadWriteMany
-     storageClassName: {{ .Values.persistence.storageClassName }}
-     resources:
-       requests:
-         storage: {{ .Values.persistence.size }}
-   ---
-   apiVersion: v1
-   kind: PersistentVolumeClaim
-   metadata:
-     name: {{ include "wordpress-chart.fullname" . }}-mysql-pvc
-   spec:
-     accessModes:
-       - ReadWriteMany
-     storageClassName: {{ .Values.persistence.storageClassName }}
-     resources:
-       requests:
-         storage: {{ .Values.persistence.size }}
-   
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: wordpress-pvc
+spec:
+  accessModes:
+    - ReadWriteMany
+  storageClassName: efs-sc
+  resources:
+    requests:
+      storage: 5Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mysql-pvc
+spec:
+  accessModes:
+    - ReadWriteMany
+  storageClassName: efs-sc
+  resources:
+    requests:
+      storage: 5Gi
