--- a/new3/wordpress-chart/values.yaml
+++ b/new3/wordpress-chart/values.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: v1
 kind: Pod
 metadata:
@@ -9,9 +8,10 @@ spec:
       image: {{ .Values.mysql.image }}
       env:
         - name: MYSQL_ROOT_PASSWORD
-          value: {{ .Values.mysql.rootPassword }}
+          value: {{ .Values.mysql.rootPassword | b64dec }}
       command: ['sh', '-c', 'sleep 3600']
   restartPolicy: Never
+
 ---
 apiVersion: v1
 kind: Pod
@@ -25,9 +25,13 @@ spec:
         - name: WORDPRESS_DB_HOST
           value: {{ .Values.wordpress.dbHost }}
         - name: WORDPRESS_DB_PASSWORD
-          value: {{ .Values.wordpress.dbPasswordSecret }}
+          valueFrom:
+            secretKeyRef:
+              name: {{ .Values.wordpress.dbPasswordSecret }}
+              key: password
       command: ['sh', '-c', 'sleep 3600']
   restartPolicy: Never
+
 ---
 apiVersion: v1
 kind: Pod
