--- a/new3/wordpress-chart/templates/tests/test-connection.yaml
+++ b/new3/wordpress-chart/templates/tests/test-connection.yaml
@@ -9,7 +9,7 @@ spec:
       image: {{ .Values.mysql.image.repository }}:{{ .Values.mysql.image.tag }}
       env:
         - name: MYSQL_ROOT_PASSWORD
-          value: {{ .Values.mysql.rootPassword | quote }}
+          value: {{ .Values.mysql.rootPassword | quote }}  # Use plain text password here
       command: ['sh', '-c', 'sleep 3600']
   restartPolicy: Never
 ---
@@ -25,10 +25,7 @@ spec:
         - name: WORDPRESS_DB_HOST
           value: {{ .Values.wordpress.dbHost | quote }}
         - name: WORDPRESS_DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: {{ .Values.wordpress.dbPasswordSecret }}
-              key: password
+          value: {{ .Values.wordpress.dbPassword | quote }}  # Use plain text password here
       command: ['sh', '-c', 'sleep 3600']
   restartPolicy: Never
 ---
