--- a/new3/wordpress-chart/templates/nginx-deployment.yaml
+++ b/new3/wordpress-chart/templates/nginx-deployment.yaml
@@ -18,6 +18,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: {{ .Values.nginx.image }}
+        image: {{ .Values.nginx.image.repository }}:{{ .Values.nginx.image.tag }}
         ports:
         - containerPort: 80
