--- a/wordpress-chart/templates/pvc.yaml
+++ b/wordpress-chart/templates/pvc.yaml
@@ -9,8 +9,15 @@ spec:
     - ReadWriteMany
   nfs:
     path: /mnt/data/mysql
-    server: fs-0c62dbc24fcc78163.efs.us-west-2.amazonaws.com
-
+    server: 192.168.105.89  # Replace with the IP address we found
+    mountOptions:
+      - nfsvers=4.1
+      - rsize=1048576
+      - wsize=1048576
+      - hard
+      - timeo=600
+      - retrans=2
+      - noresvport
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -22,7 +29,6 @@ spec:
   resources:
     requests:
       storage: {{ .Values.mysql.persistence.size }}
-
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -35,8 +41,15 @@ spec:
     - ReadWriteMany
   nfs:
     path: /mnt/data/wordpress
-    server: fs-0c62dbc24fcc78163.efs.us-west-2.amazonaws.com
-
+    server: 192.168.105.89  # Replace with the IP address we found
+    mountOptions:
+      - nfsvers=4.1
+      - rsize=1048576
+      - wsize=1048576
+      - hard
+      - timeo=600
+      - retrans=2
+      - noresvport
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
