removed unnecssary files

--- a/wordpress-chart/templates/mysql-deployment.yaml
+++ b/wordpress-chart/templates/mysql-deployment.yaml
@@ -1,33 +1,57 @@
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: {{ .Release.Name }}-mysql-pvc
+spec:
+  accessModes:
+    - ReadWriteMany
+  storageClassName: efs-sc
+  resources:
+    requests:
+      storage: {{ .Values.mysql.persistence.size }}
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: wordpress-mysql
-  labels:
-    app: wordpress
-    tier: mysql
+  name: {{ .Release.Name }}-mysql
 spec:
+  replicas: 1
   selector:
     matchLabels:
-      app: wordpress
-      tier: mysql
+      app: mysql
   template:
     metadata:
       labels:
-        app: wordpress
-        tier: mysql
+        app: mysql
     spec:
       containers:
       - name: mysql
-        image: {{ .Values.mysql.image }}
+        image: {{ .Values.mysql.image.repository }}:{{ .Values.mysql.image.tag }}
         env:
         - name: MYSQL_ROOT_PASSWORD
-          value: {{ .Values.mysql.rootPassword }}  # Use plain text password here
+          value: {{ .Values.mysql.rootPassword }}
+        ports:
+        - containerPort: 3306
         volumeMounts:
         - name: mysql-persistent-storage
           mountPath: /var/lib/mysql
-        ports:
-        - containerPort: 3306
+        securityContext:
+          runAsUser: 999  # MySQL user ID
       volumes:
       - name: mysql-persistent-storage
         persistentVolumeClaim:
-          claimName: mysql-pv-claim
+          claimName: {{ .Release.Name }}-mysql-pvc
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ .Release.Name }}-mysql
+spec:
+  selector:
+    app: mysql
+  ports:
+    - protocol: TCP
+      port: 3306
+      targetPort: 3306
