--- a/wordpress-chart/templates/nginx-deployment.yaml
+++ b/wordpress-chart/templates/nginx-deployment.yaml
@@ -1,23 +1,64 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx
-  labels:
-    app: wordpress
-    tier: frontend
+  name: {{ .Release.Name }}-nginx
 spec:
+  replicas: 1
   selector:
     matchLabels:
-      app: wordpress
-      tier: frontend
+      app: nginx
   template:
     metadata:
       labels:
-        app: wordpress
-        tier: frontend
+        app: nginx
     spec:
       containers:
       - name: nginx
         image: {{ .Values.nginx.image.repository }}:{{ .Values.nginx.image.tag }}
         ports:
         - containerPort: 80
+        volumeMounts:
+        - name: nginx-config
+          mountPath: /usr/local/openresty/nginx/conf/nginx.conf
+          subPath: nginx.conf
+      volumes:
+      - name: nginx-config
+        configMap:
+          name: {{ .Release.Name }}-nginx-config
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ .Release.Name }}-nginx
+spec:
+  selector:
+    app: nginx
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+  type: LoadBalancer
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ .Release.Name }}-nginx-config
+data:
+  nginx.conf: |
+    worker_processes auto;
+    events {
+        worker_connections 1024;
+    }
+    http {
+        server {
+            listen 80;
+            server_name localhost;
+            location / {
+                proxy_pass http://{{ .Release.Name }}-wordpress;
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+            }
+        }
+    }
