--- a/wordpress-chart/Chart.yaml
+++ b/wordpress-chart/Chart.yaml
@@ -1,6 +1,5 @@
 apiVersion: v2
-name: wordpress-chart
-description: A Helm chart for deploying WordPress with MySQL and Nginx
-type: application
+name: wordpress-production
+description: A Helm chart for running a production-grade WordPress app on Kubernetes
 version: 0.1.0
-appVersion: 5.4.1
+appVersion: "1.0.0"
