--- a/wordpress-chart/templates/wordpress-deployment.yaml
+++ b/wordpress-chart/templates/wordpress-deployment.yaml
@@ -1,35 +1,57 @@
+
+
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: {{ .Release.Name }}-wordpress-pvc
+spec:
+  accessModes:
+    - ReadWriteMany
+  storageClassName: efs-sc
+  resources:
+    requests:
+      storage: {{ .Values.wordpress.persistence.size }}
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: wordpress
-  labels:
-    app: wordpress
-    tier: frontend
+  name: {{ .Release.Name }}-wordpress
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: wordpress
-      tier: frontend
   template:
     metadata:
       labels:
         app: wordpress
-        tier: frontend
     spec:
       containers:
       - name: wordpress
-        image: {{ .Values.wordpress.image }}
+        image: {{ .Values.wordpress.image.repository }}:{{ .Values.wordpress.image.tag }}
         env:
         - name: WORDPRESS_DB_HOST
           value: {{ .Values.wordpress.dbHost }}
         - name: WORDPRESS_DB_PASSWORD
-          value: {{ .Values.wordpress.dbPasswordSecret }}  # Use plain text password here
+          value: {{ .Values.wordpress.dbPassword }}
+        ports:
+        - containerPort: 80
         volumeMounts:
         - name: wordpress-persistent-storage
           mountPath: /var/www/html
-        ports:
-        - containerPort: 80
       volumes:
       - name: wordpress-persistent-storage
         persistentVolumeClaim:
-          claimName: wp-pv-claim
+          claimName: {{ .Release.Name }}-wordpress-pvc
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ .Release.Name }}-wordpress
+spec:
+  selector:
+    app: wordpress
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
